# project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Git.cmake  LibrarySettings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
doc/: Doxyfile.in  customdoxygen.css
src/: CMakeLists.txt
src/app/: CMakeLists.txt  fonts.qrc  main.cpp  main.qml  networkcontroller.h  qml.qrc  registercomponents.cpp  registercomponents.hpp  version.h.in
src/core/: CMakeLists.txt  core.cpp  core.hpp
src/core/controllers/: CMakeLists.txt
src/core/entities/: CMakeLists.txt  user.cpp  user.hpp
src/core/repositories/: CMakeLists.txt
src/core/usecases/: CMakeLists.txt
src/preferences/: CMakeLists.txt  ipreferences.hpp  loginPreferences.cpp  loginPreferences.hpp
src/utils/: CMakeLists.txt  math.hpp
